avoid input and button overlap on mobile devices

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -66,15 +66,21 @@ button:disabled {
     margin: 0 auto; 
     padding: 1.0rem;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
 }
-.container__centered>div {
-    display: flex;
-    flex: 0 100%;
-    padding: 1.2rem;
-    margin: 1.2rem;
+
+@media (max-width: 40rem) {
+    .container__centered {
+        flex-direction: column;
+    }
+}
+
+.container__centered-grow {
+        flex-grow: 1;
+        margin: 1.2rem;
+        justify-content: center;
+        align-self: center;
 }
 
 .widget {
@@ -123,4 +129,5 @@ button:disabled {
     font-size: 1.6rem;
     font-weight: 500;
     padding: 1.2rem;
+    max-width: 30rem;
 }
